--- a/League champion stat viewer/MainWindow.xaml
+++ b/League champion stat viewer/MainWindow.xaml
@@ -72,21 +72,23 @@
             <Button Content="Load All Matches" Width="auto" Click="OnClickLoadAllMatches"/>
 
             
-            <Image Height="18" Name="loadingGif" gif:ImageBehavior.AnimatedSource="Images\loading_gif.gif" Margin="5,0,5,0"/>
+            <Image Height="18" Name="loadingGif" gif:ImageBehavior.AnimatedSource="Images\loading_gif2.gif" Margin="5,0,5,0"/>
             
         </WrapPanel>
 
+        <!-- Table header buttons -->
         <WrapPanel Grid.Row="1">
             <Button Name="GPButton" Content="Games Played" Width="auto" Click="OnClickSort" Style="{StaticResource TableHeader}" Margin="75,0,0,0"/>
             <Button Name="WRButton" Content="Winrate" Width="auto" Click="OnClickSort" Style="{StaticResource TableHeader}"/>
             <Button Name="KDAButton" Content="KDA" Width="auto" Click="OnClickSort" Style="{StaticResource TableHeader}"/>
+            <Button Name="ExportButton" Content="Export" Click="OnClickExport" Margin="30,0,0,0"/>
         </WrapPanel>
 
         <DockPanel Grid.Row="2">
             
             <!-- Champion list -->
             <Border CornerRadius="3" Background="Transparent" BorderBrush="FloralWhite" BorderThickness="3">
-                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" DockPanel.Dock="Left" Width="350">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" DockPanel.Dock="Left" Width="375">
                     <ListBox Name="lbChampions" HorizontalContentAlignment="Stretch" SelectionChanged="lbChampionsSelectionChanged"
                          Background="Transparent" BorderBrush="Transparent">
                         <ListBox.ItemTemplate>
